* https://github.com/ysb33r/gradleTest/issues/49[#49] - When folders below `gradleTest` are removed, generated code
  should be removed too.
* https://github.com/ysb33r/gradleTest/issues/53[#53] - Skip test generation if `src/gradleTest` does not exist.
* https://github.com/ysb33r/gradleTest/issues/57[#57] - Transitive dependencies for pluginsare not injected into classpath.

=== Other

* https://github.com/ysb33r/gradleTest/issues/12[#12] - Fixed Javadoc errors.
* https://github.com/ysb33r/gradleTest/issues/36[#36] - Integration test for `GradleTest` failure under M$ Windows.
* https://github.com/ysb33r/gradleTest/issues/37[#37] - Integration test for `legacy20.GradleTest` failure under
 M$ Windows.
* https://github.com/ysb33r/gradleTest/issues/40[#40] - Added `gh-pages`-based .
* https://github.com/ysb33r/gradleTest/issues/44[#44] - If license plugin is applied, exclude GradleTest sourcesets
    from check.
* https://github.com/ysb33r/gradleTest/issues/50[#50] - Removed the use of deprecated `TaskInputs.source(Object)`
  when running under Gradle 3.0+.
* https://github.com/ysb33r/gradleTest/issues/55[#55] - Memory: Split compatiblity tests into smaller runs on Appveyor.
* https://github.com/ysb33r/gradleTest/issues/55[#56] - Memory: Use virtual image rather than container on TravisCI.
* https://github.com/ysb33r/gradleTest/issues/60[#60] - Mention alternative approaches to `GradleTest`.
* https://github.com/ysb33r/gradleTest/issues/61[#61] - Validate support for Gradle 3.3.
* https://github.com/ysb33r/gradleTest/issues/63[#63] - Documented `--offline` behaviour.

// end::changelog[]

== Contributors

// tag::contributors[]
*
// end::contributors[]

== v0.5.5
* https://github.com/ysb33r/gradleTest/issues/30[#30] - Specify init scripts
* https://github.com/ysb33r/gradleTest/issues/28[#28], https://github.com/ysb33r/gradleTest/pull/29[#29] - Better error
    message when ZIP archive is broken. (https://github.com/szpak[Marcin Zajączkowski])