@@ -183,65 +183,4 @@ class CompileIntegrationSpec extends Specification {
         betaClass.exists()
     }
 
-    @Issue('https://github.com/ysb33r/gradleTest/issues/59')
-    def "Adding folders rerun test task"() {
-        given: "A GradleTest project"
-        File buildDir = project.buildDir
-        setupForNames(TESTNAMES)
-        def configureProject = {
-            configure(project) {
-                apply plugin : 'org.ysb33r.gradletest'
-
-                repositories {
-                    flatDir {
-                        dirs GRADLETESTREPO
-                    }
-                }
-
-                gradleTest {
-                    versions '2.13'
-                }
-
-                evaluate()
-            }
-        }
-
-        when: "The generated source is compiled"
-        configureProject()
-        Task generatorTask = tasks.getByName('gradleTestGenerator')
-        Task compileTask = tasks.getByName('compileGradleTestGroovy')
-        File classesDir = project.sourceSets.getByName('gradleTest').output.classesDir
-        File alphaSource = new File(buildDir,"gradleTest/src/AlphaCompatibilitySpec.groovy")
-        File betaSource = new File(buildDir,"gradleTest/src/BetaCompatibilitySpec.groovy")
-        File alphaClass = new File(classesDir,"gradleTest/tests/AlphaCompatibilitySpec.class")
-        File betaClass = new File(classesDir,"gradleTest/tests/BetaCompatibilitySpec.class")
-        generatorTask.execute()
-        compileTask.execute()
-
-
-        then: "Generator task to have executed"
-        generatorTask.didWork
-        alphaSource.exists()
-        betaSource.exists()
-        alphaClass.exists()
-        betaClass.exists()
-
-        when: "Alpha test is deleted"
-        new File(project.projectDir,'src/gradleTest/alpha').deleteDir()
-        project = ProjectBuilder.builder().withProjectDir(testProjectDir.root).build()
-        configureProject()
-        generatorTask = tasks.getByName('gradleTestGenerator')
-        compileTask = tasks.getByName('compileGradleTestGroovy')
-        generatorTask.execute()
-        compileTask.execute()
-        println "*** ${alphaClass.parentFile.listFiles()}"
-
-        then: "Alpha generated source & compiles class is also deleted"
-        generatorTask.didWork
-        !alphaSource.exists()
-        betaSource.exists()
-        !alphaClass.exists()
-        betaClass.exists()
-    }
-
 }
